--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -4,12 +4,12 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
   public RollupFullBatchRecalculator(
     String queryString,
     InvocationPoint invokePoint,
-    List<Rollup__mdt> rollupInfo,
+    List<Rollup__mdt> rollupMetas,
     SObjectType calcItemType,
     Set<String> recordIds,
     RollupFullRecalcProcessor postProcessor
   ) {
-    super(queryString, invokePoint, rollupInfo, calcItemType, recordIds, postProcessor);
+    super(queryString, invokePoint, rollupMetas, calcItemType, recordIds, postProcessor);
     this.statefulLookupToCalcItems = new Map<String, CalcItemBag>();
   }
 
@@ -29,16 +29,15 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
      * being batched, even if the inner class is just extending the functionality of its
      * parent class
      */
-    this.getDelegatedFullRecalcRollup(this.rollupInfo, calcItems, this)?.runCalc();
+    this.getInnerExecute(calcItems)?.runCalc();
     RollupLogger.Instance.save();
   }
 
-  public override void finish(Database.BatchableContext bc) {
-    if (this.isTimingOut == false) {
-      this.fullRecalcProcessor?.finish();
+  protected override List<RollupAsyncProcessor> transformFullRecalcRollups() {
+    if (this.rollupControl.ShouldRunAs__c == RollupMetaPicklists.ShouldRunAs.Synchronous) {
+      this.startAsyncWork();
     }
-    RollupLogger.Instance.log(this.getTypeName() + ' finished', LoggingLevel.DEBUG);
-    RollupLogger.Instance.save();
+    return new List<RollupAsyncProcessor>();
   }
 
   protected virtual override String getTypeName() {
@@ -49,11 +48,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
     return this.startBatchProcessor();
   }
 
-  protected override void retrieveAdditionalCalcItems(
-    Map<String, CalcItemBag> lookupToCalcItems,
-    RollupAsyncProcessor rollup,
-    Map<String, List<SObject>> localCachedFullRecalcs
-  ) {
+  protected override void retrieveAdditionalCalcItems(Map<String, CalcItemBag> lookupToCalcItems, RollupAsyncProcessor rollup) {
     Map<String, CalcItemBag> lookupKeysThatNeedFilling = new Map<String, CalcItemBag>();
     for (String lookupKey : lookupToCalcItems.keySet()) {
       CalcItemBag bag = lookupToCalcItems.get(lookupKey);
@@ -64,7 +59,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
       }
     }
 
-    super.retrieveAdditionalCalcItems(lookupKeysThatNeedFilling, rollup, localCachedFullRecalcs);
+    super.retrieveAdditionalCalcItems(lookupKeysThatNeedFilling, rollup);
 
     for (String lookupKey : lookupKeysThatNeedFilling.keySet()) {
       CalcItemBag bag = lookupKeysThatNeedFilling.get(lookupKey);
@@ -72,5 +67,9 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
       lookupToCalcItems.put(lookupKey, bag);
       this.recordIds.add(lookupKey);
     }
+  }
+
+  private RollupAsyncProcessor getInnerExecute(List<SObject> calcItems) {
+    return this.getDelegatedFullRecalcRollup(this.rollupMetas, calcItems, this);
   }
 }
